fix: remove anti-pattern of removing scrollbars on accordions — prevents users from knowing content is scrollable. also fix accessibility in global PL navigation which had been preventing full keyboard navigation

--- a/packages/uikit-workshop/src/sass/scss/01-abstracts/_mixins.scss
+++ b/packages/uikit-workshop/src/sass/scss/01-abstracts/_mixins.scss
@@ -100,7 +100,6 @@
   * 1. WIP -- part of broader UI refactor
   */
   &.pl-is-active {
-    @include hideScrollBar();
     max-height: calc(100vh - #{$offset-top} - 1rem);
     max-height: calc(
       var(--pl-viewport-height) - 1rem,
